==> spatanlaur/Proiect_Acordor_Mandolina/Core/Src/i2c-lcd.c <==
#include "i2c-lcd.h"

extern I2C_HandleTypeDef hi2c1;  // Conectăm biblioteca la I2C1

// Adresa LCD-ului în format 7-bit (de exemplu 0x27 sau 0x3F).
#define SLAVE_ADDRESS_LCD 0x27

static HAL_StatusTypeDef lcd_i2c_write(uint8_t *data)
{
  return HAL_I2C_Master_Transmit(&hi2c1, SLAVE_ADDRESS_LCD << 1, data, 4, 100);
}

void lcd_send_cmd(char cmd)
{
  uint8_t data_u, data_l;
  uint8_t data_t[4];
  data_u = (cmd & 0xF0);
  data_l = ((cmd << 4) & 0xF0);
  data_t[0] = data_u | 0x0C;  // en=1, rs=0
  data_t[1] = data_u | 0x08;  // en=0, rs=0
  data_t[2] = data_l | 0x0C;  // en=1, rs=0
  data_t[3] = data_l | 0x08;  // en=0, rs=0
  lcd_i2c_write(data_t);
}

void lcd_send_data(char data)
{
  uint8_t data_u, data_l;
  uint8_t data_t[4];
  data_u = (data & 0xF0);
  data_l = ((data << 4) & 0xF0);
  data_t[0] = data_u | 0x0D;  // en=1, rs=1
  data_t[1] = data_u | 0x09;  // en=0, rs=1
  data_t[2] = data_l | 0x0D;  // en=1, rs=1
  data_t[3] = data_l | 0x09;  // en=0, rs=1
  lcd_i2c_write(data_t);
}

void lcd_clear (void)
{
  lcd_send_cmd (0x01);
  HAL_Delay(2);
}

void lcd_put_cur(int row, int col)
{
    switch (row)
    {
        case 0:
            col |= 0x80;
            break;
        case 1:
            col |= 0xC0;
            break;
    }
    lcd_send_cmd (col);
}

void lcd_init (void)
{
  // Secvența standard de inițializare HD44780
  HAL_Delay(50);
  lcd_send_cmd (0x30);
  HAL_Delay(5);
  lcd_send_cmd (0x30);
  HAL_Delay(1);
  lcd_send_cmd (0x30);
  HAL_Delay(10);
  lcd_send_cmd (0x20);
  HAL_Delay(10);

  lcd_send_cmd (0x28); 
  HAL_Delay(1);
  lcd_send_cmd (0x08); 
  HAL_Delay(1);
  lcd_send_cmd (0x01); 
  HAL_Delay(1);
  lcd_send_cmd (0x06); 
  HAL_Delay(1);
  lcd_send_cmd (0x0C); 
}

void lcd_send_string (const char *str)
{
  while (*str) lcd_send_data (*str++);
}
